# ghost-pipeline

./: MANIFEST.in  README.md  ccf_lib.py  ghost_build_s1d.py  ghost_ccf_pipeline.py  ghost_diff_rv_timeseries.py  ghost_dual_timeseries.py  ghost_get_simple_template.py  ghost_log.py  ghost_pipeline.py  ghost_plot_dragons.py  ghost_rm_tomography.py  ghost_template_s1d.py  ghostlib.py  pyproject.toml  reduc_lib.py  reduce.sh  spectrallib.py  sun_ccf_pipeline.py
ghostpipe/: __init__.py  ccf_lib.py  ghostlib.py  reduc_lib.py  spectrallib.py
ghostpipe/masks/: WASP-101_ghost_red.mas  WASP-108.mas  depth.gt.0.1_and_lande.gt.1.mas  depth.gt.0.1_and_lande.le.1.mas
ghostpipe/masks/scripts/: ghost_ccf_pipeline.py  ghost_diff_rv_timeseries.py  ghost_pipeline.py  sun_ccf_pipeline.py
ghostpipe/scripts/: __init__.py  ghost_build_s1d.py  ghost_dual_timeseries.py  ghost_get_simple_template.py  ghost_log.py  ghost_plot_dragons.py  ghost_rm_tomography.py  ghost_template_s1d.py
masks/: WASP-108_ghost_red.mas  WASP-108_ghost_red_template.mas
